# magnetar

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
.grok/skills/widget-theme/: SKILL.md
image_scripts/: particle.template.pov  render_particles.py
profiling/: README.md
profiling/data/: .gitignore
profiling/data/baselines/: ui_bench_baseline.json
profiling/scripts/: compare_bench.py  run_ui_bench.py
python/magnetar/: __init__.py  __init__.pyi  __main__.py  app.py  assets.py  clipboard.py  particles.py  prompt.py  ui_profile.py  units.py  view3d.py  widgets.py  world.py
python/magnetar/assets/fonts/: README.md
python/magnetar/widgets/: __init__.py  base.py  buttons.py  clipboard.py  default_theme.py  history.py  history_textentry.py  keyevent.py  registry.py  textbase.py  textentry.py  textpanel.py  theme.py
src/: lib.rs
tests/: test_assets.py  test_clipboard.py  test_history_textentry.py  test_particle_sprites.py  test_prompt.py  test_screen_sprite.py  test_shared_world_apps.py  test_text_dirty.py  test_textpanel.py  test_theme.py  test_ui_profile.py  test_view3d.py  test_widgets.py  test_world.py
